﻿RELEASE HISTORY

07/07/2016 v1.1-beta.526
    - Fixed side menu refresh bug
    - Fonts are now embedded in css (no more delay downloading from google fonts)
    - Fixed SSL error when sending e-mails
    - Other minor fixes/improvements

22/06/2016 v1.1-beta.525
    - Fixed issues with scheduler UI in Internet Explorer
    - Fixed interconnections events bug (events firing multiple times)
    - Minor fixes to the new scheduler
    - ZWave interface: moved Pepper1 db download from constructor to the connect method

20/06/2016 v1.1-beta.523
    - Added some example schedules (using new hg-cron syntax)
    - Added location latitude and longitude settings to maintenance page
    - Brand new Scheduler with improved cron expression engine; deprecated: Timetable, Scheduled on/off programs and Solar Altitude Widget
    - UpdateChecker now is using "GitHub releases" as only source for update checking and upgrade files
    - Enabled UI widgets for program options
    - Should fix accented letters bug in module/group names

05/06/2016 v1.1-beta.522
    - Added new API method '/api/HomeAutomation.HomeGenie/Automation/Scheduling.ListOccurrences'
    - Added 'SetScript', 'SetData' and 'Get' methods to Scheduler helper
    - Added new wallpapers
    - Improved MQTT helper class
    - Added parity/stop bits options to serial port helper (PR #278)
    - Brand new cron event wizard for scheduled events with inline script editor
    - Helper class accessor in Javascript automation programs is now "$$"

15/05/2016 v1.1-beta.521
    - Added "Manual Update" option to maintenance page
    - Updates can now be installed from .tgz release files

14/05/2016 v1.1-beta.520
    - Optimized general web UI performances (should fix #272)
    - Migrated some generic widgets to new API model: camerainput, colorlight, dimmer, doorwindow, generic, light, sensor, siren, switch, template
    - Revamped HG Javascript API code and model
    - Fixed ZWaveLib db serialization issue